--- a/genglovepan/css/style.css
+++ b/genglovepan/css/style.css
@@ -40,7 +40,7 @@ body {
   text-align: right; /* Align the text to the right side */
 }
 .life-text h1 {
-  font-family: "华文行楷", "KaiTi", "楷体", "Noto Sans SC", cursive; /* Focus on Chinese artistic fonts */
+  font-family: "站酷文艺体", "庞门正道标题体", "腾祥嘉丽中圆", "华文行楷", "KaiTi", "楷体", "Noto Sans SC", cursive; /* Focus on Chinese artistic fonts */
   font-size: 150px; /* Increase font size significantly */
   color: #fff;
   font-style: italic;
